cilium/gateway-class-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  controllerName: io.cilium/gateway-controller
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-gateway-config
    namespace: kube-system
